[gd_scene load_steps=2 format=3 uid="uid://dxproonhau8jq"]

[ext_resource type="Script" path="res://Scenes/GenericCard/Code/card.gd" id="1_4bqce"]

[node name="Card" type="Button"]
custom_minimum_size = Vector2(160, 125)
offset_right = 160.0
offset_bottom = 125.0
size_flags_horizontal = 3
script = ExtResource("1_4bqce")

[node name="CardIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(105, 115)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -57.5
offset_right = 30.0
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2

[node name="CooldownBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -57.5
offset_right = -5.0
offset_bottom = 57.5
grow_horizontal = 0
grow_vertical = 2
step = 1.0
fill_mode = 3
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
